# anki-harmony

./: .gitignore  LICENSE  README.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: spike-findings.md
entry/src/main/ets/common/: BridgeContract.ets
entry/src/main/ets/components/: ErrorView.ets
entry/src/main/ets/models/: DeckModels.ets  index.ets
entry/src/main/ets/utils/: BridgeErrorUtils.ets  index.ets
rust/: Cargo.toml  build.sh  vendor.sh
rust/bridge/: Cargo.toml
rust/bridge/src/: lib.rs
rust/patches/: anki-25.09.4-vendor.patch
rust/scripts/: devendor.py
rust/wrapper/: Cargo.toml
rust/wrapper/src/: collection.rs  error.rs  import_export.rs  lib.rs  review.rs
specs/001-anki-harmony-core/: phases.md  plan.md  spec.md  tasks.md
specs/001-anki-harmony-core/checklists/: requirements.md
