[workspace]
resolver = "2"
members = [
    "bridge",
    "wrapper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.80"

[workspace.dependencies]
# Local
anki-harmony-wrapper = { path = "wrapper" }

# Vendored anki crates
anki = { path = "vendor/anki/rslib" }
anki_i18n = { path = "vendor/anki/rslib/i18n" }
anki_io = { path = "vendor/anki/rslib/io" }
anki_proto = { path = "vendor/anki/rslib/proto" }

# NAPI (Rust ↔ ArkTS bridge)
napi = { version = "2", features = ["napi9"] }
napi-derive = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"
