[package]
name = "anki-harmony-wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anki = { workspace = true }
anki_i18n = { workspace = true }
anki_io = { workspace = true }
anki_proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
prost = "0.13"
parking_lot = "0.12"
once_cell = "1"
